css/StylesSimpleDropDownMenu.css
/*
  Styles for Simple Dropdown Menus
  - These menus follow the technique described in w3schools
*/
#dropdownmenu .dropcontainer {
  position:fixed;
  top:50px;
  z-index:100;
  right: 100px;
}
#dropdownmenu ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: white;
  /*background-color: #333;*/
  height: 1.8em;
  border: 1px solid black;
  padding-top:3px;
}

#dropdownmenu li {
  float: left;
}

#dropdownmenu li a {
  display: inline-block;
  color: white;
  text-align: center;
  /*padding: 5px 10px;*/
  text-decoration: none;
}

.dropbtn {
  display: inline-block;
  color: black;
  text-align: center;
  vertical-align:middle;
  /*padding-top:8px;*/
  padding: 2px 10px;
  text-decoration: none;
  /*border: 1px solid black;*/
}

#dropdownmenu li a:hover, .dropdown:hover .dropbtn {
  background-color: white;
}

#dropdownmenu li.dropdown {
  display: inline-block;
}

#dropdownmenu .dropdown-content {
  display: none;
  position: absolute;
  right: 0px;
  top: 30px;  /* top of menu list */
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
  border: 2px solid saddlebrown;
}

#dropdownmenu .dropdown-content a {
  color: black;
  font-size:small;
  padding: 2px 16px;
  text-decoration: none;
  display: block;
  text-align: left;
}

#dropdownmenu .dropdown-content a:hover {
  background-color: #f1f1f1;
}

#dropdownmenu .dropdown:hover .dropdown-content {
  display: block;
}

#github div.dropbtn:hover {
  background-color: #ddd;
}

